use gear uuid for socket and pid

--- a/env/OPENSHIFT_PHP_SOCKET.erb
+++ b/env/OPENSHIFT_PHP_SOCKET.erb
@@ -1,1 +1,1 @@
-<%= ENV['OPENSHIFT_PHP_DIR'] %>/socket/php.socket
+<%= ENV['OPENSHIFT_PHP_DIR'] %>/socket/php-<%= ENV['OPENSHIFT_GEAR_UUID'] %>.socket
