--- a/conf/php-fpm.conf.erb
+++ b/conf/php-fpm.conf.erb
@@ -22,7 +22,7 @@
 ; Pid file
 ; Note: the default prefix is <compile_dir>/var
 ; Default Value: none
-pid = <%= ENV['OPENSHIFT_PHP_DIR'] %>/pid/php-fpm.pid
+pid = <%= ENV['OPENSHIFT_PHP_DIR'] %>/pid/php-fpm-<%= ENV['OPENSHIFT_GEAR_UUID'] %>.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
