Revered erb for .conf because envirement variables works better and allow undefined MySQL not to be set

--- a/conf/php-fpm.conf.erb
+++ b/conf/php-fpm.conf.erb
@@ -507,42 +507,42 @@ pm.max_spare_servers = 3
 ;env[TEMP] = /tmp
 
 # Informational Environment Variables
-env[OPENSHIFT_APP_DNS]  = <%= ENV['OPENSHIFT_APP_DNS'] %>
-env[OPENSHIFT_APP_NAME] = <%= ENV['OPENSHIFT_APP_NAME'] %>
-env[OPENSHIFT_APP_UUID] = <%= ENV['OPENSHIFT_APP_UUID'] %>
+env[OPENSHIFT_APP_DNS]  = $OPENSHIFT_APP_DNS
+env[OPENSHIFT_APP_NAME] = $OPENSHIFT_APP_NAME
+env[OPENSHIFT_APP_UUID] = $OPENSHIFT_APP_UUID
 
 # Directory Environment Variables
-env[OPENSHIFT_DATA_DIR] = <%= ENV['OPENSHIFT_DATA_DIR'] %>
-env[OPENSHIFT_REPO_DIR] = <%= ENV['OPENSHIFT_REPO_DIR'] %>
-env[OPENSHIFT_TMP_DIR]  = <%= ENV['OPENSHIFT_TMP_DIR'] %>
-env[OPENSHIFT_LOG_DIR]  = <%= ENV['OPENSHIFT_LOG_DIR'] %>
+env[OPENSHIFT_DATA_DIR] = $OPENSHIFT_DATA_DIR
+env[OPENSHIFT_REPO_DIR] = $OPENSHIFT_REPO_DIR
+env[OPENSHIFT_TMP_DIR]  = $OPENSHIFT_TMP_DIR
+env[OPENSHIFT_LOG_DIR]  = $OPENSHIFT_LOG_DIR
 
 # Database Environment Variables
-env[OPENSHIFT_MYSQL_DB_HOST]  = <%= ENV['OPENSHIFT_MYSQL_DB_HOST'] %>
-env[OPENSHIFT_MYSQL_DB_PORT]  = <%= ENV['OPENSHIFT_MYSQL_DB_PORT'] %>
-env[OPENSHIFT_MYSQL_DB_SOCKET] = <%= ENV['OPENSHIFT_MYSQL_DB_SOCKET'] %>
-env[OPENSHIFT_MYSQL_DB_URL]    = <%= ENV['OPENSHIFT_MYSQL_DB_URL'] %>
-env[OPENSHIFT_MYSQL_DB_USERNAME] = <%= ENV['OPENSHIFT_MYSQL_DB_USERNAME'] %>
-env[OPENSHIFT_MYSQL_DB_PASSWORD] = <%= ENV['OPENSHIFT_MYSQL_DB_PASSWORD'] %>
+env[OPENSHIFT_MYSQL_DB_HOST]  = $OPENSHIFT_MYSQL_DB_HOST
+env[OPENSHIFT_MYSQL_DB_PORT]  = $OPENSHIFT_MYSQL_DB_PORT
+env[OPENSHIFT_MYSQL_DB_SOCKET] = $OPENSHIFT_MYSQL_DB_SOCKET
+env[OPENSHIFT_MYSQL_DB_URL]    = $OPENSHIFT_MYSQL_DB_URL
+env[OPENSHIFT_MYSQL_DB_USERNAME] = $OPENSHIFT_MYSQL_DB_USERNAME
+env[OPENSHIFT_MYSQL_DB_PASSWORD] = $OPENSHIFT_MYSQL_DB_PASSWORD
 
-env[OPENSHIFT_MONGODB_DB_HOST] = <%= ENV['OPENSHIFT_MONGODB_DB_HOST'] %>
-env[OPENSHIFT_MONGODB_DB_PORT] = <%= ENV['OPENSHIFT_MONGODB_DB_PORT'] %>
-env[OPENSHIFT_MONGODB_DB_SOCKET] = <%= ENV['OPENSHIFT_MONGODB_DB_SOCKET'] %>
-env[OPENSHIFT_MONGODB_DB_URL]    = <%= ENV['OPENSHIFT_MONGODB_DB_URL'] %>
-env[OPENSHIFT_MONGODB_DB_USERNAME] = <%= ENV['OPENSHIFT_MONGODB_DB_USERNAME'] %>
-env[OPENSHIFT_MONGODB_DB_PASSWORD] = <%= ENV['OPENSHIFT_MONGODB_DB_PASSWORD'] %>
+env[OPENSHIFT_MONGODB_DB_HOST] = $OPENSHIFT_MONGODB_DB_HOST
+env[OPENSHIFT_MONGODB_DB_PORT] = $OPENSHIFT_MONGODB_DB_PORT
+env[OPENSHIFT_MONGODB_DB_SOCKET] = $OPENSHIFT_MONGODB_DB_SOCKET
+env[OPENSHIFT_MONGODB_DB_URL]    = $OPENSHIFT_MONGODB_DB_URL
+env[OPENSHIFT_MONGODB_DB_USERNAME] = $OPENSHIFT_MONGODB_DB_USERNAME
+env[OPENSHIFT_MONGODB_DB_PASSWORD] = $OPENSHIFT_MONGODB_DB_PASSWORD
 
-env[OPENSHIFT_POSTGRESQL_DB_HOST]   = <%= ENV['OPENSHIFT_POSTGRESQL_DB_HOST'] %>
-env[OPENSHIFT_POSTGRESQL_DB_PORT]   = <%= ENV['OPENSHIFT_POSTGRESQL_DB_PORT'] %>
-env[OPENSHIFT_POSTGRESQL_DB_SOCKET] = <%= ENV['OPENSHIFT_POSTGRESQL_DB_SOCKET'] %>
-env[OPENSHIFT_POSTGRESQL_DB_URL]    = <%= ENV['OPENSHIFT_POSTGRESQL_DB_URL'] %>
-env[OPENSHIFT_POSTGRESQL_DB_USERNAME] = <%= ENV['OPENSHIFT_POSTGRESQL_DB_USERNAME'] %>
-env[OPENSHIFT_POSTGRESQL_DB_PASSWORD] = <%= ENV['OPENSHIFT_POSTGRESQL_DB_PASSWORD'] %>
+env[OPENSHIFT_POSTGRESQL_DB_HOST]   = $OPENSHIFT_POSTGRESQL_DB_HOST
+env[OPENSHIFT_POSTGRESQL_DB_PORT]   = $OPENSHIFT_POSTGRESQL_DB_PORT
+env[OPENSHIFT_POSTGRESQL_DB_SOCKET] = $OPENSHIFT_POSTGRESQL_DB_SOCKET
+env[OPENSHIFT_POSTGRESQL_DB_URL]    = $OPENSHIFT_POSTGRESQL_DB_URL
+env[OPENSHIFT_POSTGRESQL_DB_USERNAME] = $OPENSHIFT_POSTGRESQL_DB_USERNAME
+env[OPENSHIFT_POSTGRESQL_DB_PASSWORD] = $OPENSHIFT_POSTGRESQL_DB_PASSWORD
 
 # Gear Environment Variables
-env[OPENSHIFT_GEAR_DNS]  = <%= ENV['OPENSHIFT_GEAR_DNS'] %>
-env[OPENSHIFT_GEAR_NAME] = <%= ENV['OPENSHIFT_GEAR_NAME'] %>
-env[OPENSHIFT_GEAR_UUID] = <%= ENV['OPENSHIFT_GEAR_UUID'] %>
+env[OPENSHIFT_GEAR_DNS]  = $OPENSHIFT_GEAR_DNS
+env[OPENSHIFT_GEAR_NAME] = $OPENSHIFT_GEAR_NAME
+env[OPENSHIFT_GEAR_UUID] = $OPENSHIFT_GEAR_UUID
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
